--- a/src/containers/About/About.scss
+++ b/src/containers/About/About.scss
@@ -2,7 +2,7 @@
   border: 2px solid skyblue;
   color: whitesmoke;
   font-size: 3rem;
-  position: absolute;
+  position: fixed;
   // top: 15%;
   left: 0;
   width: 100%;
